2005-05-10  Alex Roitman  <shura@gramps-project.org>
	* src/data/gramps.schemas: Add a welcome key.
	* src/GrampsGconfKeys.py: Add get/set methods for welcome key.
	* src/GrampsIniKeys.py: Add get/set methods for welcome key.

	* src/po/ru.po: Update.

	* src/gramps.glade: Remove unused widget.
	* src/gramps_main.py: Use new welcome key for the welcome dialog.

2005-05-10  Julio Sanchez  <jsanchez@users.sourceforge.net>
	* src/po/es.po: Updated translation
	* src/plugins/rel_es.py: Revert to more conservative relationships

2005-05-09  Don Allingham  <don@gramps-project.org>
	* src/gramps.glade: new scrollable message dialog 
	* src/gramps_main.py: add new upgrading information message
	* src/template.po: new translatable string
	* src/StartupDialog.py: Added Alex's configuration upgrade, but
	wrapped in gconf detection

2005-05-09  Alex Roitman  <shura@gramps-project.org>
	* doc/gramps-manual/C/authors.xml: Update.

	* src/DisplayModels.py (column_change): Use localized time string.
	* src/PeopleModel.py (column_change): Use localized time string.
	* src/RelLib.py (get_change_display): Use localized time string.

2005-05-09  Baruch Even  <baruch@ev-en.org>
	* src/plugins/GraphViz.py (parse_user_options): Use 'justyears'.

2005-05-08  Don Allingham  <don@gramps-project.org>
	* src/WriteGedcom.py: fix adopted relationship generation

2005-05-08  Alex Roitman  <shura@gramps-project.org>
	* src/po/ru.po: Typos.

	* doc/gramps-manual/C/usage.xml: Typo.

2005-05-07  Alex Roitman  <shura@gramps-project.org>
	* INSTALL: Update.

2005-05-07  Julio Sanchez  <jsanchez@users.sourceforge.net>
	* src/po/es.po: Updated translation

2005-05-07  Jens Arvidsson <jya@sverige.nu>
	* src/po/sv.po: Partial translation update for version 2.0.0.

2005-05-07  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/PedView.py (build_detail_string), src/FamilyView.py (load_family):
	Dont crash on strange signal race condition, that leaves database in
	corrupt state before sending "active-changed"